k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sk045-teammate
  namespace: skala-practice
  labels:
    app: sk045-teammate
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sk045-teammate
  template:
    metadata:
      labels:
        app: sk045-teammate
    spec:
      containers:
        - name: cursor-k8s-cluster-repo
          image: 514090833954.dkr.ecr.ap-southeast-1.amazonaws.com/cursor-k8s-cluster-repo:69ea69a18ac253da1450638bb6ee6ac73051dcd6
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
            - containerPort: 8081
          # ConfigMap의 모든 데이터를 환경 변수로 가져옵니다.
